fixed to support active turtle

--- a/src/resources/languages/English.properties
+++ b/src/resources/languages/English.properties
@@ -22,6 +22,8 @@ YCoordinate = ycor
 Heading = heading
 IsPenDown = pendown\\?|pendownp
 IsShowing = showing\\?|showingp
+ID = id
+NumTurtles = turtles
 #
 # Math Operations
 #
